package ra04_gestion_datos_y_aplicaciones.u07_coleccioneDinámicasDatos.TareaPistaDeportiva;

public enum Superficie {
    tierra_barida, cemento, hierba;
}
